quicksort implementation with VT